#94 - Fixing the horizontal scroll bar in IE

--- a/src/main/resources/public/styles/ctf.less
+++ b/src/main/resources/public/styles/ctf.less
@@ -25,6 +25,8 @@ html, body {
 	background: lighten(#FECB6E, 20%);
 	background: none;
 	height: 100%;	
+	width: 100%;
+	overflow-x: hidden;
 }
 
 * {
@@ -103,6 +105,7 @@ strong {
 	text-align: center;
 	padding: @default-padding;
 	
+	height: 197px;
 	box-shadow: 0px 5px 15px #777;
 }
 
